- Vault no longer required for local profile, as a Docker instance of IBM MQ is used instead. - Reenabling test. - Config renamed from .yaml to yml.